# nobber-sit

./: .pre-commit-config.yaml  README.md
.github/workflows/: daily-chat.yaml  deploy.yaml
docker/: COPYRIGHT.txt  THIRD-PARTY-LICENSES.txt  config.json  main.py  pyproject.toml
ux/: astro.config.mjs  package-lock.json  package.json
ux/public/: daily_emote_totals.json  emote-stats.json  user_emote_totals.json
ux/src/components/: BarPlot.astro  Credit.astro  Title.astro
ux/src/layouts/: Layout.astro
ux/src/pages/: index.astro
